# tinygizmo

./: .gitignore  tiny-gizmo.cpp  tiny-gizmo.hpp
tiny-gizmo-example/: CMakeLists.txt  example-main.cpp  gl-api.hpp  util.hpp
